--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,8 @@
 <ion-view view-title="Dashboard">
   <ion-content class="padding">
+    <button class="button button-primary" ng-click="showConfirm()">
+      Confirm
+    </button>
     <div class="list card">
       <div class="item item-divider">Recent Updates</div>
       <div class="item item-body">
