--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -1,31 +1,91 @@
-<ion-view view-title="Dashboard">
-  <ion-content class="padding">
-    <button class="button button-primary" ng-click="showConfirm()">
-      Confirm
-    </button>
+<ion-view view-title="Select Building and Unit">
+  <ion-content class="padding" on-swipe-right="goBack()" on-swipe-left="goForward()">
+
+      <button class="button button-balanced">
+          Barcode Scanner
+      </button>
+
     <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
+      <div class="item item-divider">Select Building and Unit</div>
       <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
-        </div>
+        
+
+          <label class="item item-input item-select">
+              <div class="input-label">
+                  Building
+              </div>
+              <select>
+                  <option >All</option>
+                  <option selected>34</option>
+                  <option>H</option>
+                  <option>86</option>
+               </select>
+          </label>
+
+
+          <label class="item item-input item-select">
+              <div class="input-label">
+                  Unit
+              </div>
+              <select>
+                  <option>All</option>
+                  <option>Tower 1</option>
+                  <option selected>Tower 2</option>
+                  <option>Cultivator 1</option>
+              </select>
+          </label>
+
       </div>
     </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
+      <div class="list">
+
+          <div class="item item-divider">
+              Alerts
+          </div>
+
+          <a class="item" href="#">
+
+              <div class="row">
+                  <div class="col col-75">Building 35 Tower 2</div>
+                  <div class="col">off > 8h</div>
+              </div>
+          </a>
+          <a class="item" href="#">
+
+              <div class="row">
+                  <div class="col col-75">Building 35 Tower 2</div>
+                  <div class="col">off > 8h</div>
+              </div>
+          </a>
+          <a class="item" href="#">
+
+              <div class="row">
+                  <div class="col col-75">Building 35 Tower 2</div>
+                  <div class="col">off > 8h</div>
+              </div>
+          </a>
+          <a class="item" href="#">
+
+              <div class="row">
+                  <div class="col col-75">Building 35 Tower 2</div>
+                  <div class="col">off > 8h</div>
+              </div>
+          </a>
+          <a class="item" href="#">
+
+              <div class="row">
+                  <div class="col col-75">Building 35 Tower 2</div>
+                  <div class="col">off > 8h</div>
+              </div>
+          </a>
+          <a class="item" href="#">
+
+              <div class="row">
+                  <div class="col col-75">Building 35 Tower 2</div>
+                  <div class="col">off > 8h</div>
+              </div>
+          </a>
+
       </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
-    </div>
   </ion-content>
 </ion-view>
