--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -1,9 +1,9 @@
 <!--
-Create tabs with an icon and label, using the tabs-positive style.
+Create tabs with an icon and label, using the tabs-stable style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon tabs-stable"  on-swipe-right="goBack()" on-swipe-left="goForward()">
 
   <!-- Dashboard Tab -->
   <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
