--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Select Building and Unit">
   <ion-content class="padding" on-swipe-right="goBack()" on-swipe-left="goForward()">
 
-      <button class="button button-balanced">
+      <button class="button button-balanced"  ng-click="showConfirm()">
           Barcode Scanner
       </button>
 
