--- a/platforms/android/assets/www/templates/modal.html
+++ b/platforms/android/assets/www/templates/modal.html
@@ -1,38 +1,10 @@
-<ion-view view-title="Select Building and Unit">
-  <ion-content class="padding" on-swipe-right="goBack()" on-swipe-left="goForward()">
+<ion-view view-title="DETAIL CHART">
+  <ion-content class="padding" >
 
-      <button class="button button-balanced"  ng-click="gotoTower()">
-          Barcode Scanner
-      </button>
-
-    <div class="list card">
-      <div class="item item-divider">Select Building and Unit</div>
-      <div class="item item-body">
-        
-
-          <label class="item item-input item-select">
-				  <div class="input-label">
-					  Building
-				  </div>
-				   <select data-ng-model="building" data-ng-options="building for building in buildings" ng-click="oldValue = selected" ng-change="getBuildingUnits(building, oldValue)">
-				</select>
-          </label>
-
-
-          <label class="item item-input item-select">
-              <div class="input-label">
-                  Unit
-              </div>
-				<select data-ng-model="unit" ng-change="updateUnit()" data-ng-options="unit for unit in units">
-			    </select>
-          </label>
-
-      </div>
-    </div>
       <div class="list">
 
           <div class="item item-divider">
-              Alerts
+              Detail of chart...
           </div>
 
           <a class="item" href="#">
